Fixed: nasty chrome/osx bug that makes thing disappear when div's height  with overflow:auto changes

--- a/client/app/views/styles/application.styl
+++ b/client/app/views/styles/application.styl
@@ -8,10 +8,11 @@
 *
     box-sizing border-box
 
+body
+    background #fff
+
 .container
     margin-left 20%
-    background #fff
-    overflow auto
 
 i.tag-icon
     background url('../images/tag.png') no-repeat
