--- a/client/public/stylesheets/app.css
+++ b/client/public/stylesheets/app.css
@@ -881,10 +881,11 @@ textarea:active {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+body {
+  background: #fff;
+}
 .container {
   margin-left: 20%;
-  background: #fff;
-  overflow: auto;
 }
 i.tag-icon {
   background: url("../images/tag.png") no-repeat;
